Adding global view

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -18,6 +18,12 @@
                 <span>Calendario</span>
             </a>
         </li>
+        <li>
+            <a routerLink="/global" routerLinkActive="active">
+                <mat-icon>table_chart</mat-icon>
+                <span>Mapa de Asistencia</span>
+            </a>
+        </li>
     </ul>
 
     <div class="profile-avatar">
