--- a/src/app/layout/bottom-nav/bottom-nav.component.html
+++ b/src/app/layout/bottom-nav/bottom-nav.component.html
@@ -1,11 +1,12 @@
 <nav class="bottom-nav">
     <a routerLink="/user-panel" routerLinkActive="active">
         <mat-icon>dashboard</mat-icon>
-        <span>Panel</span>
       </a>
       <a routerLink="/calendar" routerLinkActive="active">
         <mat-icon>event</mat-icon>
-        <span>Calendario</span>
+      </a>
+      <a routerLink="/global" routerLinkActive="active">
+        <mat-icon>table_chart</mat-icon>
       </a>
       <a class="profile-avatar" routerLink="/profile">
         <img src="https://i.pravatar.cc/40" alt="Avatar" />
