--- a/src/app/layout/bottom-nav/bottom-nav.component.scss
+++ b/src/app/layout/bottom-nav/bottom-nav.component.scss
@@ -1,16 +1,17 @@
 .bottom-nav {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 60px;
-    background: white;
-    border-top: 1px solid #eee;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.05);
-    z-index: 100;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  padding-bottom: env(safe-area-inset-bottom, 10px); 
+  background: white;
+  border-top: 1px solid #eee;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.05);
+  z-index: 100;
   
     a {
       text-decoration: none;
