--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -43,6 +43,10 @@
     font-size: 0.75rem;
     transition: color 0.2s;
   }
+
+  .nav-links a span{
+    text-align: center;
+  }
   
   .nav-links a:hover,
   .nav-links a.active {
