Deep link in heatmap

--- a/src/app/pages/heatmap/heatmap.component.html
+++ b/src/app/pages/heatmap/heatmap.component.html
@@ -28,8 +28,11 @@
                 <tr *ngFor="let user of users">
                     <td>{{ user.name }}</td>
                     <td *ngFor="let day of daysInMonth">
-                        <div [ngClass]="getCellClass(user, day)"></div>
-                    </td>
+                        <a [routerLink]="['/user-panel']" [queryParams]="{ date: day | date: 'yyyy-MM-dd' }">
+                          <div [ngClass]="getCellClass(user, day)"></div>
+                        </a>
+                      </td>
+                      
                 </tr>
             </tbody>
         </table>
