--- a/src/app/layout/bottom-nav/bottom-nav.component.scss
+++ b/src/app/layout/bottom-nav/bottom-nav.component.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 60px;
-  padding-bottom: env(safe-area-inset-bottom, 10px); 
+  padding-bottom: 10px; 
   background: white;
   border-top: 1px solid #eee;
   display: flex;
