--- a/src/app/pages/heatmap/heatmap.component.scss
+++ b/src/app/pages/heatmap/heatmap.component.scss
@@ -178,3 +178,8 @@
     border-right: 1px solid #ccc;
 }
 
+.attendance-map td.weekend,
+.attendance-map th.weekend {
+  background-color: #f0f0f0;
+}
+
