today style heatmap

--- a/src/app/pages/heatmap/heatmap.component.html
+++ b/src/app/pages/heatmap/heatmap.component.html
@@ -27,18 +27,14 @@
             <tbody>
                 <tr *ngFor="let user of users">
                     <td>{{ user.name }}</td>
-                    <td *ngFor="let day of daysInMonth" [ngClass]="{ weekend: isWeekend(day) }">
-                        <a
-                          [routerLink]="['/user-panel']"
-                          [queryParams]="{ date: dayToParam(day) }"
-                          matTooltip="{{ user.name }} - {{ day | date: 'dd MMMM' }}"
-                          matTooltipPosition="above"
-                        >
-                          <div [ngClass]="getCellClass(user, day)"></div>
+                    <td *ngFor="let day of daysInMonth" [ngClass]="{ weekend: isWeekend(day), today: isToday(day) }">
+                        <a [routerLink]="['/user-panel']" [queryParams]="{ date: day | date: 'yyyy-MM-dd' }">
+                            <div [ngClass]="getCellClass(user, day)"></div>
                         </a>
-                      </td>
-                      
-                      
+                    </td>
+
+
+
                 </tr>
             </tbody>
         </table>
