--- a/src/app/pages/heatmap/heatmap.component.scss
+++ b/src/app/pages/heatmap/heatmap.component.scss
@@ -159,6 +159,10 @@
         align-items: flex-start;
         gap: 0.5rem;
     }
+
+    .attendance-map{
+        margin: 2rem 1rem;
+    }
 }
 
 .attendance-map a {
@@ -178,8 +182,13 @@
     border-right: 1px solid #ccc;
 }
 
-.attendance-map td.weekend,
-.attendance-map th.weekend {
-  background-color: #f0f0f0;
-}
-
+.attendance-map .weekend {
+    background-color: #f5f5f5 !important;
+  }
+  
+  .attendance-map .today {
+    border-left: 2px solid #007bff;
+    border-right: 2px solid #007bff;
+    background-color: #eaf3ff !important;
+  }
+  
