--- a/src/app/pages/heatmap/heatmap.component.html
+++ b/src/app/pages/heatmap/heatmap.component.html
@@ -28,7 +28,8 @@
                 <tr *ngFor="let user of users">
                     <td>{{ user.name }}</td>
                     <td *ngFor="let day of daysInMonth" [ngClass]="{ weekend: isWeekend(day), today: isToday(day) }">
-                        <a [routerLink]="['/user-panel']" [queryParams]="{ date: day | date: 'yyyy-MM-dd' }">
+                        <a [routerLink]="['/user-panel']" [queryParams]="{ date: day | date: 'yyyy-MM-dd' }" matTooltip="{{ user.name }} - {{ day | date: 'dd MMMM' }}"
+                        matTooltipPosition="above">
                             <div [ngClass]="getCellClass(user, day)"></div>
                         </a>
                     </td>
